# Mussubot

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.work_hours  LICENSE.md  README.md  docker-compose.yaml
.github/workflows/: ci-cd.yml  mussubotti-deploy.yml  work-hours-deploy.yml
assets/work_hours/: dashboard.html  index.html  login.html  upload.html
k8s/: README.md  configmap.yaml  deployment.yaml  mussubotti-deployment.yaml  secret.yaml  work-hours-deployment.yaml  work-hours-service-ingress.yaml
locales/: en.yml  fi-FI.yml
src/: config.rs  error.rs  lib.rs  main.rs  shutdown.rs  startup.rs
src/commands/: calendar.rs  mod.rs  util.rs  work.rs
src/components/: mod.rs
src/components/google_calendar/: actor.rs  handle.rs  mod.rs  models.rs  notifications.rs  scheduler.rs  time.rs  token.rs
src/components/redis_service/: actor.rs  mod.rs
src/components/work_schedule/: actor.rs  handle.rs  mod.rs  models.rs  notifications.rs  scheduler.rs  time.rs
src/handlers/: mod.rs
src/utils/: i18n.rs  mod.rs  scheduler.rs  time.rs
tests/: google_calendar_mock.rs  mod.rs  redis_mock.rs  smoke_tests.rs
